--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir . --ignore __tests__",
+    "build-docs": "documentation build src/** -f html -o docs",
     "watch": "babel -w src --out-dir . --ignore __tests__",
     "format": "npm run format-src && npm run format-markdown",
     "format-src": "prettier-eslint --write \"src/**/*.js\"",
