feat: adding createLinkedPages method
resolves: #1

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
 jobs:
   include:
   - stage: Publish npm
+    if: type IN (push) AND branch = master
     node_js: node
     script:
     - echo "Release npm against $(node -v) ..."
