--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-pagination",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Gatsby utility that generates pages with pagination",
   "author": "Hays Clark <hays@infinitedescent.com>",
   "license": "MIT",
@@ -32,20 +32,21 @@
   "homepage": "https://github.com/infinitedescent/gatsby-pagination#readme",
   "standard-version": {
     "scripts": {
-      "precommit": "npm run build-docs && git add docs/index.html"
+      "precommit": "npm run docs && git add docs/index.html"
     }
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.1",
+    "cross-env": "^5.1.3",
     "gh-pages": "^1.1.0",
     "jest": "^21.2.1",
-    "nyc": "^11.3.0",
+    "nyc": "^11.4.1",
     "prettier": "^1.9.1",
-    "prettier-eslint-cli": "^4.6.1",
-    "standard-version": "^4.2.0",
+    "prettier-eslint-cli": "^4.7.0",
+    "standard-version": "^4.3.0",
     "watch": "^1.0.2"
   }
 }
