--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
+    "documentation": "^5.4.0",
     "jest": "^21.2.1",
     "nyc": "^11.4.1",
     "prettier": "^1.9.1",
